
What's New in 5.2
-----------------

.. important:: Removal of Support for {+mdb-server+} 3.6

   {+driver-short+} v5.2 removes support for {+mdb-server+} 3.6. To
   learn more about compatible versions of the server, see
   :ref:`kotlin-sync-compatibility`.

The 5.2 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.2-wn-items.rst

   .. replacement:: avs-index-link

      the :ref:`kotlin-sync-search-avs-indexes` guide

   .. replacement:: encrypt-link

      the :ref:`In-Use Encryption <kotlin-sync-fle>` guide

   .. replacement:: vector-search-link

      the :atlas:`Atlas Vector Search Quick Start
      </atlas-vector-search/tutorials/vector-search-quick-start/>` and
      select :guilabel:`Kotlin (Sync)` from the language dropdown

- Adds support for serializers from the ``kotlinx-datetime`` library
  that let you map {+language+} date and time types to BSON as the
  expected types instead of as strings. To learn more, see the
  :ref:`kotlin-sync-datetime-serialization` section of the {+language+}
  Serialization guide.

- Supports serialization of `JsonElement
  <{+kotlin-docs+}/api/kotlinx.serialization/kotlinx-serialization-json/kotlinx.serialization.json/-json-element/>`__
  values. To work with the ``JsonElement`` type, you must add the
  ``kotlinx-serialization-json`` library as a dependency in your
  application.

.. _kotlin-sync-version-5.1.3:

What's New in 5.1.3
-------------------

The 5.1.3 driver patch release includes the following changes:

.. sharedinclude:: dbx/jvm/v5.1.3-wn-items.rst

.. _kotlin-sync-version-5.1.2:

What's New in 5.1.2
-------------------

The 5.1.2 driver patch release includes the following changes:

- Support for encoding Kotlin data classes with nullable
  generic parameter types. For example, you can encode the ``Container`` class
  in the following code:
  
  .. code-block:: kotlin

     @Serializable
     data class Box<T>(
         val boxed: T
     )
     