@@ -25,12 +25,12 @@ Connect to MongoDB
    Create a MongoClient </connect/mongoclient>
    Choose a Connection Target </connect/connection-targets>
    Connection Options </connect/connection-options>
+   Limit Execution Time </connect/csot>   
    Enable TLS </connect/tls>
    Stable API </connect/stable-api>
 
 ..    /connect/network-compression
 ..    /connect/server-selection
-..    /connect/csot
 
 Overview
 --------
