@@ -149,9 +149,13 @@ Timeouts
 
        | **Connection URI**: ``timeoutMs=10000``
 
-   * - **socketTimeoutMS**
-     - | The time in milliseconds to attempt a send or receive on a
-         connection before the attempt times out.
+   * - **socketTimeoutMS** *(deprecated)*
+     - | This option is deprecated. You can configure this timeout by
+       | setting the the :ref:`client-level timeout <kotlin-sync-csot>`
+       | instead.
+       |
+       | Milliseconds to attempt a send or receive on a connection
+       | before the attempt times out.
        |
        | **Data Type**: integer
        | **Default**: no timeout
