@@ -117,9 +117,6 @@ The following table describes the options you can set to customize ``countDocume
    * - ``limit``
      - | Sets the maximum number of documents to count. Must be a positive integer.
 
-   * - ``maxTime``
-     - | Sets the maximum amount of time to allow the operation to run, in milliseconds.
-
    * - ``collation``
      - | Specifies the kind of language collation to use when sorting
          results. For more information, see :manual:`Collation </reference/collation/#std-label-collation>`
@@ -182,9 +179,6 @@ The following table describes the options you can set to customize ``estimatedDo
 
    * - ``comment``
      - | Specifies a comment to attach to the operation.
-
-   * - ``maxTime``
-     - | Specifies the maximum amount of time to allow the operation to run, in milliseconds.
 
 The following example uses an ``EstimatedDocumentCountOptions`` object to add a comment to
 the ``estimatedDocumentCount()`` operation:
