@@ -31,6 +31,12 @@ the server.
 Whenever the {+driver-short+} performs a read operation that returns multiple
 documents, it automatically returns those documents in a cursor.
 
+.. tip:: Cursor Timeout
+
+   You can set a timeout on your cursor to return query results.
+   To learn more, see the :ref:`kotlin-sync-csot-cursor` section of the Limit
+   Server Execution Time guide.
+
 Sample Data
 ~~~~~~~~~~~
 
