@@ -129,18 +129,14 @@ modifying queries:
    * - ``limit()``
      - | Limits the number of documents to be returned from the query.
 
-   * - ``maxTime()`` 
-     - | Sets the maximum execution time on the server for this operation.
-
    * - ``skip()``
      - | Sets the number of documents to skip.
 
    * - ``sort()``
      - | Defines the sort criteria to apply to the query.
 
-The following example chains the ``limit()`` and ``maxTime()`` methods to limit the
-number of documents returned by the query to ``10`` and set a maximum execution time of
-``10000`` milliseconds on the operation:
+The following example chains the ``limit()`` method to limit the
+number of documents returned by the query to ``10``:
 
 .. literalinclude:: /includes/read/retrieve.kt
    :start-after: start-modified-find
