@@ -109,6 +109,13 @@ manage your transaction:
        |
        | **Parameters**: transaction body function, ``TransactionOptions``
 
+.. tip:: Transaction Timeout
+
+   You can set a limit on amount of time that operations can take
+   to complete in your transactions. To learn more, see the
+   :ref:`kotlin-sync-csot-transaction` section of the Limit Server
+   Execution Time guide.
+
 Example
 -------
 
