@@ -35,6 +35,10 @@ improvements, and fixes:
 
 .. sharedinclude:: dbx/jvm/v5.2-wn-items.rst
 
+   .. replacement:: csot-link
+
+      the :ref:`kotlin-sync-csot` guide
+
    .. replacement:: avs-index-link
 
       the :ref:`kotlin-sync-search-avs-indexes` guide
